--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,6 +118,24 @@ jobs:
     runs-on: ubuntu-latest
     needs: backend-lint-and-test
 
+    services:
+      postgres:
+        image: postgres:16-alpine
+        env:
+          POSTGRES_USER: test_user
+          POSTGRES_PASSWORD: test_password
+          POSTGRES_DB: test_budget_db
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+    env:
+      DATABASE_URL: postgresql://test_user:test_password@localhost:5432/test_budget_db
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -139,8 +157,6 @@ jobs:
 
       - name: Build backend
         working-directory: ./backend
-        env:
-          DATABASE_URL: postgresql://test_user:test_password@localhost:5432/test_budget_db
         run: npm run build
 
       - name: Check build artifacts
