--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.4",
     "recharts": "^3.3.0",
+    "remark-gfm": "^4.0.1",
     "socket.io-client": "^4.8.1",
     "xlsx": "^0.18.5"
   },
