feat: add profile page with user information management
- Implemented a new ProfilePage component for users to manage their profile information.
- Added localization support for profile-related texts in Turkish.
- Integrated API calls to fetch and update user profile data.
- Enhanced AdminPage and UserRoleManagementPage to include user profile modal for detailed user information.
- Refactored group and user tables to use DataTable component for better performance and maintainability.
- Updated user API service to include methods for fetching public profiles and updating user information.
- Added new fields to the User type to accommodate profile data.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -43,7 +43,7 @@
       "serverReadyAction": {
         "pattern": "Local:.*?(https?://\\S+)",
         "uriFormat": "%s",
-        "action": "debugWithChrome"
+        "action": "debugWithEdge"
       }
     },
     {
